[package]
name = "supasim-spirv-tools-sys"
version = "0.0.2"
edition = "2024"
resolver = "3"
description = "Very simple SpirV-tools bindings as used by supasim. No other utilities or helpers are provided."
license = "MIT OR Apache-2.0"
repository = "https://github.com/supasim/spirv-tools-sys"
readme = "README.md"
homepage = "https://supasim.github.io/"

[dependencies]

[build-dependencies]
bindgen = "0.72"
